[project]
name = "arena-curriculum"
version = "0.1.0"
description = "Exercises from the ARENA currculum"
authors = [{ name = "Matteo Figini", email = "matteo5.figini@mail.polimi.it" }]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
  "torch (>=2.10.0,<3.0.0)",
  "nnsight (>=0.5.15,<0.6.0)",
  "transformers (<6.0.0)",
  "nnterp (>=1.2.2,<2.0.0)",
  "circuitsvis (>=1.43.3,<2.0.0)",
  "transformer-lens (>=2.17.0,<3.0.0)",
  "pyarrow (>=14.0.1)",
  "datasets (<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
