[project]
name = "arena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "circuitsvis>=1.43.3",
    "eindex-callum",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "ipywidgets>=8.1.8",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "plotly>=6.6.0",
    "rich>=14.3.3",
    "tqdm>=4.67.3",
    "transformer-lens>=2.18.0",
]

[tool.uv.sources]
eindex-callum = { git = "https://github.com/callummcdougall/eindex.git" }
